# dehli-musikk-sampler-engine

./: .gitignore  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
cmake/: DmsePlugin.cmake  pack_install.cmake
plugin/: DehliStandaloneApp.cpp  PluginEntry.cpp
source/: ManifestPluginProcessor.cpp  ManifestPluginProcessor.h  SamplerEngine.cpp  SamplerEngine.h
source/audio/: CurvedAdsr.h  EmbeddedFlacSource.cpp  EmbeddedFlacSource.h  FxChain.cpp  FxChain.h  NoteSequencer.cpp  NoteSequencer.h  SampleSource.h  VoiceEngine.cpp  VoiceEngine.h
source/model/: Manifest.h  ManifestLoader.cpp  ManifestLoader.h  ManifestWriter.cpp  ManifestWriter.h  NoteValues.h  TableEval.h
source/params/: CompiledMode.h  ManifestParameters.cpp  ManifestParameters.h
source/ui/: ColouredKeyboard.h  LevelMeter.h  ManifestEditor.cpp  ManifestEditor.h  ManifestUiComponent.cpp  ManifestUiComponent.h  SettingsPanel.h  StandaloneWindowLookAndFeel.h  WheelLookAndFeel.h
tests/: AudioRegressionTests.cpp  CompiledModeTests.cpp  FxChainTests.cpp  ManifestLintTests.cpp  ManifestLoaderTests.cpp  ManifestWriterTests.cpp  NoteSequencerTests.cpp  SampleSourceTests.cpp  SamplerEngineTests.cpp  VoiceEngineTests.cpp
tests/fixtures/: autostrum.json  bass.json  drums.json  kitchensink.json  wurli.json
tests/golden/: fxchain_lowpass_gain_waveshaper.f32  group_fx_lfo_tremulant.f32  voice_adsr_pitch.f32
